@@ -86,6 +86,8 @@ Version 1.5.1 -- CVS
   - Changed structure of xtra_code functions that are used by some translations.
   - Added Uighur language support.
   - Added status bar to compose window when "Compose In New Window" is used.
+  - Reenabled the move_messages_button_action hook and changed its name to
+    mailbox_display_button_action to promote the new location
 
 Version 1.5.0
 --------------------
